add code for syncfiles

--- a/Config.cfg
+++ b/Config.cfg
@@ -11,6 +11,15 @@ Arma3 = 1102
 BEC = 1152
 HC = 1155
 
+[Server location]
+Server root = D:\ArmA3Sync\
 
 [Workshop]
 Dir =
+
+
+
+[Sync files path]
+Readme Path = D:\ArmA3Sync\changelog.txt
+MPmissions path =
+Beserver path =
