--- a/Config.cfg
+++ b/Config.cfg
@@ -12,10 +12,10 @@ BEC = 1152
 HC = 1155
 
 [Server location]
-Server root = D:\ArmA3Sync\
+Server Path = D:\ArmA3Sync\
 
 [Workshop]
-Dir =
+Path =
 
 
 
@@ -23,3 +23,4 @@ Dir =
 Readme Path = D:\ArmA3Sync\changelog.txt
 MPmissions path =
 Beserver path =
+Custom path =
