--- a/Config.cfg
+++ b/Config.cfg
@@ -1,6 +1,10 @@
 #Arma 3 server (re)Starter - config file
 #Author: Ghostdragon 2018
 
+
+
+#All enable = variables should use True or False
+
 [DEFAULT]
 #default values to be started
 
@@ -24,3 +28,10 @@ Readme Path = D:\ArmA3Sync\changelog.txt
 MPmissions path =
 Beserver path =
 Custom path =
+
+
+[Archive]
+
+Archive server log =               # True False only:
+Server log path = D:\ArmA3Sync\
+log to leave = 2
